--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  go_router: ^14.6.2
+  shared_preferences: ^2.2.3
+  font_awesome_flutter: ^10.8.0
+  flutter_bloc: ^8.1.6
+  bloc: ^8.1.4
+  dartz: ^0.10.1
+  cached_network_image: ^3.4.0
+  dio: ^5.7.0
+  awesome_dialog: ^3.2.1
+  permission_handler: ^11.3.1
+  flutter_stripe: ^11.3.0
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
