--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   dio: ^5.7.0
   awesome_dialog: ^3.2.1
   permission_handler: ^11.3.1
-  flutter_stripe: ^11.3.0
+#  flutter_stripe: ^11.3.0
   flutter_secure_storage: ^9.2.2
   intl: ^0.18.1
 
@@ -60,7 +60,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
