--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,20 +36,22 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
+  cupertino_icons: ^1.0.8
   go_router: ^14.6.2
-  shared_preferences: ^2.2.3
+  shared_preferences: ^2.3.4
   font_awesome_flutter: ^10.8.0
   flutter_bloc: ^8.1.6
   bloc: ^8.1.4
   dartz: ^0.10.1
-  cached_network_image: ^3.4.0
+  cached_network_image: ^3.4.1
   dio: ^5.7.0
   awesome_dialog: ^3.2.1
   permission_handler: ^11.3.1
 #  flutter_stripe: ^11.3.0
   flutter_secure_storage: ^9.2.2
-  intl: ^0.18.1
+  intl: any
+  flutter_svg: ^2.0.16
+  animations: ^2.0.11
 
 dev_dependencies:
   flutter_test:
@@ -60,8 +62,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
-  flutter_native_splash: ^2.3.0
+  flutter_lints: ^5.0.0
+  flutter_native_splash: ^2.4.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
