--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,8 +81,8 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
+    - assets/
     - assets/logo/
-#    - assets/auth/
 #    - assets/home/
 
 flutter_native_splash:
