--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   intl: any
   flutter_svg: ^2.0.16
   animations: ^2.0.11
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
