--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,24 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  asset_generator: ^1.3.1
 
+
+
+asset_generator:
+  images:
+    - assets/auth/
+    - assets/foods/
+    - assets/home/
+    - assets/profile/
+    - assets/logo/
+    - assets/restaurant/
+
+  icons:
+    - assets/svg/
+
+  output_dir: lib/core/utils/customs/assets.dart #optional
+  class_name: Assets
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -83,10 +100,13 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
+    - assets/svg/
     - assets/auth/
-    - assets/logo/
+    - assets/foods/
     - assets/home/
     - assets/profile/
+    - assets/logo/
+    - assets/restaurant/
 
 flutter_native_splash:
   android: true
