--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   animations: ^2.0.11
   flutter_rating_bar: ^4.0.1
   avatar_glow: ^3.0.1
+  flutter_toggle_tab: ^1.5.1
 
 dev_dependencies:
   flutter_test:
